objects/Promotion_Part__c.object
<CustomObject>
    <description>The parts that will be bundled with the promotion</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <description>The date we will start billing for these parts.</description>
        <inlineHelpText>The date we will start billing for these parts.</inlineHelpText>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Committed_Quantity__c</fullName>
        <description>The number of parts purchased at the beginning of the contract.</description>
        <inlineHelpText>The number of parts purchased at the beginning of the contract.</inlineHelpText>
        <label>Committed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>Discount in dollars.</description>
        <inlineHelpText>Discount in dollars.</inlineHelpText>
        <label>Discount Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Length__c</fullName>
        <description>The number of billing periods the discount will be applied.</description>
        <inlineHelpText>The number of billing periods the discount will be applied.</inlineHelpText>
        <label>Discount Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <description>Discount in percent.</description>
        <inlineHelpText>Discount in percent.</inlineHelpText>
        <label>Discount Percent</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Included_Usage_Units__c</fullName>
        <description>The number of free usage units per billing period.</description>
        <inlineHelpText>The number of free usage units per billing period.</inlineHelpText>
        <label>Included Usage Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartToAdd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The part to add as part of the promotion</description>
        <label>Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotion Parts</relationshipLabel>
        <relationshipName>Promotion_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <description>The part number of the part included in the bundle.</description>
        <inlineHelpText>The part number of the part included in the bundle.</inlineHelpText>
        <label>Part Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The product rate plan that will be added to the quote automatically.</description>
        <inlineHelpText>The product rate plan that will be added to the quote automatically.</inlineHelpText>
        <label>Product Rate Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zqu__ProductRatePlan__c.zqu__Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.PartToAdd__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Promotion Parts</relationshipLabel>
        <relationshipName>Promotion_Parts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <description>The promotion part number that this part is bundled with.</description>
        <inlineHelpText>The promotion part number that this part is bundled with.</inlineHelpText>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Promotion Parts</relationshipLabel>
        <relationshipName>Promotion_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Promotion Part</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Promotion Part Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Discount_Length</fullName>
        <active>true</active>
        <errorConditionFormula>Discount_Length__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Discount_Length__c</errorDisplayField>
        <errorMessage>The Discount Length must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_One_Discount_Type</fullName>
        <active>true</active>
        <description>Discount amount and percent can not be specified at the same time.</description>
        <errorConditionFormula>NOT(ISNULL(Discount_Amount__c ))&amp;&amp; Discount_Amount__c &gt; 0 &amp;&amp;
NOT(ISNULL(Discount_Percent__c )) &amp;&amp; Discount_Percent__c &gt; 0</errorConditionFormula>
        <errorDisplayField>Discount_Percent__c</errorDisplayField>
        <errorMessage>Discount amount and percent can not be specified at the same time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Part_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( PartToAdd__c )  ||  ISBLANK(PartToAdd__c )</errorConditionFormula>
        <errorMessage>A part must be selected</errorMessage>
    </validationRules>
</CustomObject>